# iai_rescue_robosherlock

./: CMakeLists.txt  CMakeLists.txt~  package.xml
clouds/EXTRACT/: cloud_cluster_17.pcd  cloud_cluster_3.pcd  cloud_cluster_7.pcd  cloud_cluster_8.pcd
clouds/MORPHO/: complete_object.pcd
cmake/: iai_rescue_robosherlock_config.cmake
config/: semantic_map.yaml
descriptors/analysis_engines/: my_demo.xml  my_demo.xml~
descriptors/annotators/: pclAnnotator.xml  regionAnnotator.xml  semAnnotator.xml
descriptors/typesystem/: all_types.xml
include/iai_rescue_robosherlock/types/: all_types.h  type_definitions.h
launch/: demo.launch
nodes/: .generate_typesystem_639cd187623eaa17b426332f995e80dd.modified  .update_analysis_engines_b132e6270d17b02312a85c0a3f139fe4.modified  CMakeLists.txt  morpho.cpp  morpho.cpp~
nodes/extract/: CMakeLists.txt  CMakeLists.txt~  extract.cpp  extract.cpp~
nodes/extracter/: CMakeLists.txt  extracter.cpp  extracter.cpp~
nodes/grouping/: CMakeLists.txt  grouping.cpp  grouping.cpp~
nodes/hypo/: CMakeLists.txt  CMakeLists.txt~  hypothezer.cpp
src/: pclAnnotator.cpp  regionAnnotator.cpp  regionAnnotator.cpp~  semAnnotator.cpp
